fix sidebar on mobile landscape mode

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -10,6 +10,7 @@ $business: #5692b1;
 $airplane: #f9b704;
 $fashion: #dd1787;
 $plus: #e76049;
+$cog: #585858;
 $settings: #585858;
 $card-info: #9d9d9d;
 $title-color: #313131;
@@ -49,7 +50,7 @@ $icons: (
     "airplane": $airplane,
     "bag": $fashion,
     "plus": $plus,
-    "cog": $plus,
+    "cog": $cog,
     "comment": $card-info,
     "calendar": $card-info,
     "contact-us": $header-color,
