--- a/src/styles/layout/_news.scss
+++ b/src/styles/layout/_news.scss
@@ -9,6 +9,9 @@ main {
     @media screen and (max-width: $desktop-large) {
         margin-top: $header-height-xl;
     }
+    @media screen and (max-width: $mobile-landscape) {
+        margin-left: 60px;
+    }
 }
 
 .cards {
